steam.archiso/airootfs/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Mon Jan 26 18:42:58 2015
*security
:INPUT ACCEPT [6:3925]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6:1326]
COMMIT
# Completed on Mon Jan 26 18:42:58 2015
# Generated by iptables-save v1.4.21 on Mon Jan 26 18:42:58 2015
*raw
:PREROUTING ACCEPT [6:3925]
:OUTPUT ACCEPT [6:1326]
COMMIT
# Completed on Mon Jan 26 18:42:58 2015
# Generated by iptables-save v1.4.21 on Mon Jan 26 18:42:58 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [6:1326]
:LO - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A INPUT -i lo -j LO
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -j DROP
-A LO -j ACCEPT
-A TCP -j DROP
-A UDP -j DROP
COMMIT
# Completed on Mon Jan 26 18:42:58 2015
# Generated by iptables-save v1.4.21 on Mon Jan 26 18:42:58 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Mon Jan 26 18:42:58 2015
# Generated by iptables-save v1.4.21 on Mon Jan 26 18:42:58 2015
*mangle
:PREROUTING ACCEPT [6:3925]
:INPUT ACCEPT [6:3925]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6:1326]
:POSTROUTING ACCEPT [6:1326]
COMMIT
# Completed on Mon Jan 26 18:42:58 2015
